--- a/gb/25/9/21/n14598968.md
+++ b/gb/25/9/21/n14598968.md
@@ -10,52 +10,59 @@
 <p>“我们谴责暴力，但我们依然会坚守善良，就像柯克那样，捡起他的‘麦克风’，继续传递真相。”特意从瑞典飞到凤凰城的年轻人艾迪说。</p>
 <p>“美国转折点”是柯克创办的非营利组织，如今已成长为美国最具影响力的青年保守派运动组织之一。</p>
 <p>9月21日的追悼会将在亚利桑那州格伦代尔市（Glendale）的州立农场体育场（State Farm Stadium）举行，现场预计将有逾10万人出席。同时，这也将是一个美国高层云集的活动，美国总统川普和副总统万斯都将出席并发表讲话。</p>
-<figure id="attachment_14598981" aria-describedby="caption-attachment-14598981" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598981-adeda0507c158828012461ae2aa921e7.jpg"><img decoding="async" class=" wp-image-14598981" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598981-adeda0507c158828012461ae2aa921e7.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14598981" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外，用不同的方式悼念美国知名保守派活动家查理?柯克（Charlie Kirk）。（姜琳达／大纪元）</figcaption></figure>
-<figure id="attachment_14598982" aria-describedby="caption-attachment-14598982" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598982-e3e0d7f47e3200a0f7db2811348e4af5.jpg"><img decoding="async" class=" wp-image-14598982" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598982-e3e0d7f47e3200a0f7db2811348e4af5.jpg" alt="" width="601" b="451" /></a><figcaption id="caption-attachment-14598982" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外，用不同的方式悼念美国知名保守派活动家查理?柯克（Charlie Kirk）。（姜琳达／大纪元）</figcaption></figure>
-<figure id="attachment_14598984" aria-describedby="caption-attachment-14598984" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598984-ed6d914b7fa07586fd3fbda79e9aaf32.jpg"><img decoding="async" class=" wp-image-14598984" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598984-ed6d914b7fa07586fd3fbda79e9aaf32.jpg" alt="" width="601" b="451" /></a><figcaption id="caption-attachment-14598984" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外，用不同的方式悼念美国知名保守派活动家查理?柯克（Charlie Kirk）。（姜琳达／大纪元）</figcaption></figure>
-<figure id="attachment_14598985" aria-describedby="caption-attachment-14598985" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598985-c2b96e1d369a1b69c159cf77e5b7532e.jpg"><img decoding="async" class=" wp-image-14598985" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598985-c2b96e1d369a1b69c159cf77e5b7532e.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14598985" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外，用不同的方式悼念美国知名保守派活动家查理?柯克（Charlie Kirk）。（姜琳达／大纪元）</figcaption></figure>
-<figure id="attachment_14598986" aria-describedby="caption-attachment-14598986" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598986-6d8148434d85bba7219a152a9a27eb71.jpg"><img decoding="async" class=" wp-image-14598986" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598986-6d8148434d85bba7219a152a9a27eb71.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14598986" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外，用不同的方式悼念美国知名保守派活动家查理?柯克（Charlie Kirk）。（姜琳达／大纪元）</figcaption></figure>
-<figure id="attachment_14598987" aria-describedby="caption-attachment-14598987" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598987-93890f920b4d37bd86836a1cc2af5b09.jpg"><img decoding="async" class=" wp-image-14598987" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598987-93890f920b4d37bd86836a1cc2af5b09.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14598987" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外，用不同的方式悼念美国知名保守派活动家查理?柯克（Charlie Kirk）。（姜琳达／大纪元）</figcaption></figure>
-<figure id="attachment_14598988" aria-describedby="caption-attachment-14598988" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598988-bd5aa8920c0bfb575dc8eb1f759097e9.jpg"><img decoding="async" class=" wp-image-14598988" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598988-bd5aa8920c0bfb575dc8eb1f759097e9.jpg" alt="" width="601" b="451" /></a><figcaption id="caption-attachment-14598988" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外，用不同的方式悼念美国知名保守派活动家查理?柯克（Charlie Kirk）。（姜琳达／大纪元）</figcaption></figure>
-<figure id="attachment_14598989" aria-describedby="caption-attachment-14598989" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598989-86ee677a34b3443d2f3d74ae701b31c4.jpg"><img decoding="async" class=" wp-image-14598989" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598989-86ee677a34b3443d2f3d74ae701b31c4.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14598989" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外，悼念美国知名保守派活动家查理?柯克（Charlie Kirk）。（姜琳达／大纪元）</figcaption></figure>
-<figure id="attachment_14598990" aria-describedby="caption-attachment-14598990" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598990-4ec6d4c24c0ab5ab75b8d6f733b1d1ef.jpg"><img decoding="async" class=" wp-image-14598990" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598990-4ec6d4c24c0ab5ab75b8d6f733b1d1ef.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14598990" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外，为柯克祷告。（姜琳达／大纪元）</figcaption></figure>
-<figure id="attachment_14598991" aria-describedby="caption-attachment-14598991" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598991-c1c444070feaf8bd050f03693130e568.jpg"><img decoding="async" class=" wp-image-14598991" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598991-c1c444070feaf8bd050f03693130e568.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14598991" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外悼念柯克。家长带着孩子一同前往，并送上一面美国国旗。（姜琳达／大纪元）</figcaption></figure>
-<figure id="attachment_14598992" aria-describedby="caption-attachment-14598992" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598992-179db42f14a4ca8126201147b4a77f2a.jpg"><img decoding="async" class=" wp-image-14598992" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598992-179db42f14a4ca8126201147b4a77f2a.jpg" alt="" width="601" b="451" /></a><figcaption id="caption-attachment-14598992" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外悼念柯克。有民众因不舍默默流下眼泪。（姜琳达／大纪元）</figcaption></figure>
-<figure id="attachment_14598993" aria-describedby="caption-attachment-14598993" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598993-f33dd868bb1048d1d6c4ccc6fc34ade4.jpg"><img decoding="async" class=" wp-image-14598993" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598993-f33dd868bb1048d1d6c4ccc6fc34ade4.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14598993" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外悼念柯克。民众在板上写出内心的话。（姜琳达／大纪元）</figcaption></figure>
-<figure id="attachment_14598994" aria-describedby="caption-attachment-14598994" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598994-a0dc26e0d9a6c2baade9e52d03ddb129.jpg"><img decoding="async" class=" wp-image-14598994" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598994-a0dc26e0d9a6c2baade9e52d03ddb129.jpg" alt="" width="601" b="451" /></a><figcaption id="caption-attachment-14598994" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外悼念柯克。民众在板上写出内心的话。（姜琳达／大纪元）</figcaption></figure>
-<figure id="attachment_14598995" aria-describedby="caption-attachment-14598995" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598995-205aabc061f671307c9b7152616feb7a.jpg"><img decoding="async" class=" wp-image-14598995" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598995-205aabc061f671307c9b7152616feb7a.jpg" alt="" width="601" b="451" /></a><figcaption id="caption-attachment-14598995" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外送上花束，悼念柯克。（姜琳达／大纪元）</figcaption></figure>
-<figure id="attachment_14598996" aria-describedby="caption-attachment-14598996" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598996-84493b3cdfba370142f982f73588247f.jpg"><img decoding="async" class=" wp-image-14598996" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598996-84493b3cdfba370142f982f73588247f.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14598996" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外送上花束，悼念柯克。（姜琳达／大纪元）</figcaption></figure>
-<figure id="attachment_14598997" aria-describedby="caption-attachment-14598997" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598997-10473b8c2e66a1e59b2489a94a37162e.jpg"><img decoding="async" class=" wp-image-14598997" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598997-10473b8c2e66a1e59b2489a94a37162e.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14598997" class="wp-caption-text">现场有民众送上为柯克素描的画像。（姜琳达／大纪元）</figcaption></figure>
-<figure id="attachment_14598998" aria-describedby="caption-attachment-14598998" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598998-0360a827c37b851dcd364756e3f8a6f5.jpg"><img decoding="async" class=" wp-image-14598998" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598998-0360a827c37b851dcd364756e3f8a6f5.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14598998" class="wp-caption-text">美国知名保守派活动家查理?柯克（Charlie Kirk）的追悼会将于当地时间9月21日中午在亚利桑那州举行。高速公路上的大型广告牌全是关于悼念会的信息。（姜琳达／大纪元）</figcaption></figure>
+</p>
+<p>?
+<blockquote class="twitter-tweet" data-media-max-width="560">
+<p dir="ltr" lang="ja">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外，用不同的方式悼念美国知名保守派活动家查理?柯克（Charlie Kirk）。（姜琳达／大纪元） <ahref="https://t.co/wC4CX2nCXj" rel="nofollow noopener noreferrer">https://t.co/wC4CX2nCXj</a> <ahref="https://t.co/PopoNTMSB6" rel="nofollow noopener noreferrer"></a><a href="https://d2r9hn1obbkp2q.cloudfront.net/X5uIURZv9k3j"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="PopoNTMSB6</a></p>
+<p>— 大纪元爆料平台 (@china_epoch) <ahref="https://twitter.com/china_epoch/status/1969771475830731189?ref_src=twsrc%5Etfw" rel="nofollow noopener noreferrer">September 21, 2025</a></p></blockquote>
+<p>
+<p>?</p>
+<figure id="attachment_14598981" aria-describedby="caption-attachment-14598981" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598981-adeda0507c158828012461ae2aa921e7.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14598981" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598981-adeda0507c158828012461ae2aa921e7.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14598981" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外，用不同的方式悼念美国知名保守派活动家查理?柯克（Charlie Kirk）。（姜琳达／大纪元）</figcaption></figure>
+<figure id="attachment_14598982" aria-describedby="caption-attachment-14598982" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598982-e3e0d7f47e3200a0f7db2811348e4af5.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14598982" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598982-e3e0d7f47e3200a0f7db2811348e4af5.jpg" alt="" width="601" b="451"></a><figcaption id="caption-attachment-14598982" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外，用不同的方式悼念美国知名保守派活动家查理?柯克（Charlie Kirk）。（姜琳达／大纪元）</figcaption></figure>
+<figure id="attachment_14598984" aria-describedby="caption-attachment-14598984" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598984-ed6d914b7fa07586fd3fbda79e9aaf32.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14598984" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598984-ed6d914b7fa07586fd3fbda79e9aaf32.jpg" alt="" width="601" b="451"></a><figcaption id="caption-attachment-14598984" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外，用不同的方式悼念美国知名保守派活动家查理?柯克（Charlie Kirk）。（姜琳达／大纪元）</figcaption></figure>
+<figure id="attachment_14598985" aria-describedby="caption-attachment-14598985" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598985-c2b96e1d369a1b69c159cf77e5b7532e.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14598985" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598985-c2b96e1d369a1b69c159cf77e5b7532e.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14598985" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外，用不同的方式悼念美国知名保守派活动家查理?柯克（Charlie Kirk）。（姜琳达／大纪元）</figcaption></figure>
+<figure id="attachment_14598986" aria-describedby="caption-attachment-14598986" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598986-6d8148434d85bba7219a152a9a27eb71.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14598986" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598986-6d8148434d85bba7219a152a9a27eb71.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14598986" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外，用不同的方式悼念美国知名保守派活动家查理?柯克（Charlie Kirk）。（姜琳达／大纪元）</figcaption></figure>
+<figure id="attachment_14598987" aria-describedby="caption-attachment-14598987" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598987-93890f920b4d37bd86836a1cc2af5b09.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14598987" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598987-93890f920b4d37bd86836a1cc2af5b09.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14598987" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外，用不同的方式悼念美国知名保守派活动家查理?柯克（Charlie Kirk）。（姜琳达／大纪元）</figcaption></figure>
+<figure id="attachment_14598988" aria-describedby="caption-attachment-14598988" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598988-bd5aa8920c0bfb575dc8eb1f759097e9.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14598988" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598988-bd5aa8920c0bfb575dc8eb1f759097e9.jpg" alt="" width="601" b="451"></a><figcaption id="caption-attachment-14598988" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外，用不同的方式悼念美国知名保守派活动家查理?柯克（Charlie Kirk）。（姜琳达／大纪元）</figcaption></figure>
+<figure id="attachment_14598989" aria-describedby="caption-attachment-14598989" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598989-86ee677a34b3443d2f3d74ae701b31c4.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14598989" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598989-86ee677a34b3443d2f3d74ae701b31c4.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14598989" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外，悼念美国知名保守派活动家查理?柯克（Charlie Kirk）。（姜琳达／大纪元）</figcaption></figure>
+<figure id="attachment_14598990" aria-describedby="caption-attachment-14598990" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598990-4ec6d4c24c0ab5ab75b8d6f733b1d1ef.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14598990" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598990-4ec6d4c24c0ab5ab75b8d6f733b1d1ef.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14598990" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外，为柯克祷告。（姜琳达／大纪元）</figcaption></figure>
+<figure id="attachment_14598991" aria-describedby="caption-attachment-14598991" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598991-c1c444070feaf8bd050f03693130e568.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14598991" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598991-c1c444070feaf8bd050f03693130e568.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14598991" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外悼念柯克。家长带着孩子一同前往，并送上一面美国国旗。（姜琳达／大纪元）</figcaption></figure>
+<figure id="attachment_14598992" aria-describedby="caption-attachment-14598992" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598992-179db42f14a4ca8126201147b4a77f2a.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14598992" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598992-179db42f14a4ca8126201147b4a77f2a.jpg" alt="" width="601" b="451"></a><figcaption id="caption-attachment-14598992" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外悼念柯克。有民众因不舍默默流下眼泪。（姜琳达／大纪元）</figcaption></figure>
+<figure id="attachment_14598993" aria-describedby="caption-attachment-14598993" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598993-f33dd868bb1048d1d6c4ccc6fc34ade4.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14598993" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598993-f33dd868bb1048d1d6c4ccc6fc34ade4.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14598993" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外悼念柯克。民众在板上写出内心的话。（姜琳达／大纪元）</figcaption></figure>
+<figure id="attachment_14598994" aria-describedby="caption-attachment-14598994" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598994-a0dc26e0d9a6c2baade9e52d03ddb129.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14598994" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598994-a0dc26e0d9a6c2baade9e52d03ddb129.jpg" alt="" width="601" b="451"></a><figcaption id="caption-attachment-14598994" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外悼念柯克。民众在板上写出内心的话。（姜琳达／大纪元）</figcaption></figure>
+<figure id="attachment_14598995" aria-describedby="caption-attachment-14598995" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598995-205aabc061f671307c9b7152616feb7a.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14598995" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598995-205aabc061f671307c9b7152616feb7a.jpg" alt="" width="601" b="451"></a><figcaption id="caption-attachment-14598995" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外送上花束，悼念柯克。（姜琳达／大纪元）</figcaption></figure>
+<figure id="attachment_14598996" aria-describedby="caption-attachment-14598996" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598996-84493b3cdfba370142f982f73588247f.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14598996" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598996-84493b3cdfba370142f982f73588247f.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14598996" class="wp-caption-text">2025年9月20日，大批民众涌入位于亚利桑那州凤凰城的“美国转折点”总部外送上花束，悼念柯克。（姜琳达／大纪元）</figcaption></figure>
+<figure id="attachment_14598997" aria-describedby="caption-attachment-14598997" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598997-10473b8c2e66a1e59b2489a94a37162e.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14598997" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598997-10473b8c2e66a1e59b2489a94a37162e.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14598997" class="wp-caption-text">现场有民众送上为柯克素描的画像。（姜琳达／大纪元）</figcaption></figure>
+<figure id="attachment_14598998" aria-describedby="caption-attachment-14598998" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/09/id14598998-0360a827c37b851dcd364756e3f8a6f5.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14598998" src="https://i.epochtimes.com/assets/uploads/2025/09/id14598998-0360a827c37b851dcd364756e3f8a6f5.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14598998" class="wp-caption-text">美国知名保守派活动家查理?柯克（Charlie Kirk）的追悼会将于当地时间9月21日中午在亚利桑那州举行。高速公路上的大型广告牌全是关于悼念会的信息。（姜琳达／大纪元）</figcaption></figure>
 <p>责任编辑：李玲</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/3/n14587214.md#1">银发乐活日登场 罗斯密社区共享健康资源</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/1/n14585212.md#1">柑县台美商会联谊 近百人参与交流</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/1/n14585196.md#1">台美人历史协会9月邀民众抗老保健</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/1/n14585123.md#1">彰女校友9/18南加餐叙 疫后重启 欢迎报名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/31/n11835336.md#1" target="_blank">王赫：庚子年首月 中共地动山摇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/30/n7475135.md#1" target="_blank">公安医院院长的晚期胃癌怎么好的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/29/n10096052.md#1" target="_blank">郑兢业：人吃与吃人（四 ）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/21/n10732313.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（1）</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/31/n14564212.md#1">【古道人生】才女一首诗竟能改变贫穷丈夫的命运</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14573085.md#1">【未解之谜】两千年无人敢挖？揭秘秦始皇的地下王国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/9/n14570620.md#1">【未解之谜】地球七大脉轮终极预言</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569067.md#1">亚里斯多德的教育课：培养品格的四门学科</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/4/n4588708.md#1">秉笔直书 为后世法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/4/n13695331.md#1">【器乐独奏与协奏曲】莫扎特降E大调第三号圆号协奏曲，作品第447号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/14/n14573708.md#1">【纪元焦点】商圈关闭 上海为何如此萧条？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/15/n14573945.md#1">【时事金扫描】美俄谈判 川普奇招拿捏普京</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572340.md#1">经济学家：史上最大金融泡沫将致市场大崩盘</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572367.md#1">美国最具价值的10所私立和公立大学</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14572804.md#1">【更新】台风杨柳袭台 14日停班停课一览</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572427.md#1">以赵露思解约风波为例 王晶曝大陆娱乐圈乱象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14573139.md#1">《歌手2025》评分仅3.8 创史上最低分</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14573082.md#1">首度回应隐身两年原因 杨洋受访一度欲言又止</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572439.md#1">港星陈冠希遭Nike起诉 索赔逾12万美元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/14/n14573446.md#1">传贝佐斯想让妻子桑切斯在《007》担任要角</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14572017.md#1">电器在不使用时拔掉插头 既省电又降温</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14572631.md#1">园艺专家经验谈：别再种植这5种树</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/13/n14572608.md#1">美移民新规收紧婚姻绿卡 华人律师析政策要点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/14/n14573410.md#1">睡太多会增加死亡风险？ 专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/11/n14571685.md#1">睡姿决定健康：睡得好又不酸痛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/23/n10079917.md#1">腊八的来源与风俗：吃了腊八饭就把年来办！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/19/n4461035.md#1">美人巨眼识穷途——读《虬髯客传》之红拂女(上)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/23/n4464215.md#1">闻道长安似弈棋——读《虬髯客传》之虬髯客(下)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686592.md#1">人物写实油画大赛入围作品欣赏——《深渊边缘》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/8/2/n3332566.md#1">守信重义 等到迟来的好姻缘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688442.md#1">【直播】诺姆部长就“旅行黄金时代”开记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688463.md#1">【军事情报局】打爆委国的F-35中队飞往中东</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688656.md#1">【时事金扫描】伊朗多地被炸 美以斩首开始？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687842.md#1">为何金价暴跌 创40年来最大单日跌幅</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687999.md#1">军方缺席中共政治局会议 专家析内讧后遗症</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688147.md#1">中共吁官兵支持处理张又侠 被指证军心不稳</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688459.md#1">陆媒票选最有好感艺人 佘诗曼成唯一入榜港星</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687927.md#1">金钟国罕见公开爱妻身份 称一直把她当妹妹看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688468.md#1">李嘉明晒片酬 自曝发视频吐槽后收到剧组拖欠款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688492.md#1">港姐吴文忻乳癌复发 癌细胞扩散至一重要器官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687882.md#1">老婆是头号粉丝 玄彬主演《韩国制造》获狂赞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688718.md#1">这些行为看似无害 但会让旅馆员工恼火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685989.md#1">2026年不容错过的旅行目的地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687470.md#1">专家解析嫉妒损害伴侣关系的3种方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689115.md#1">为什么小狗需要尾巴？ 有何作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688143.md#1">【车评】展现超级四驱实力 2025 Mitsubishi Outlander SEL</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/9/21/n14598968.htm">组图：柯克追悼会前 民众涌入亚利桑那州悼念</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/9/21/n14598968.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
